# nfactorial-demo

./: environment.yml  pyproject.toml
app/: app.py
