[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Dauren <dauren.baitursyn@toptal.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
transformers = "^4.30.2"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
